--- a/src/main/resources/static/profile.html
+++ b/src/main/resources/static/profile.html
@@ -5,27 +5,16 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>
-            <img 
-           src = "https://media.ldscdn.org/images/media-library/gospel-art/old-testament/garden-of-eden-clawson-art-37727-print.jpg?download=true"
-           alt ="Not Found"
-           style="width:100%;">
-            <h1 align="center">Profile</h1>
-            <div id="profile">
-            <img 
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSqDRNpZnsvzSQhpwB70KxTy3WVNTB66CwkVz0PGPZHJI6dh2GZ"
-            >
-            <input type="file" name="pic" accept="image/*">
-            </div>
-        </div>
-        <div>
-        
-        </div>
-    </body>
+<head>
+    <title>JSP Work Page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<div class = "head">
+    <img
+            src = "https://media.ldscdn.org/images/media-library/gospel-art/old-testament/garden-of-eden-clawson-art-37727-print.jpg?download=true"
+            alt ="Not Found"
+            style="width:100%;">
+    <h1 align="center">Adam Meets Eve</h1>
+</div>
 </html>
