Commit: Login Dummy

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,5 +16,17 @@ and open the template in the editor.
             alt ="Not Found"
             style="width:100%;">
     <h1 align="center">Adam Meets Eve</h1>
+    <form action="profile.html" method="post">
+        <div style="float:left">
+        Username:<br>
+        <input type="text" name="Username">
+        </div>
+        <div style="float:left">
+        Password:<br>
+        <input type="text" name="Password">
+        </div>
+        <br/>
+        <input type="submit" name="Login">
+    </form>
 </div>
 </html>
