--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,12 +10,20 @@ and open the template in the editor.
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+<style>
+    h1 {position: absolute;
+            top: 45%;
+            left: 50%;
+            text-align: center;
+            font-size: 100px;
+            font-family: Comic Sans MS;}
+</style>
 <div class = "head">
     <img
             src = "https://media.ldscdn.org/images/media-library/gospel-art/old-testament/garden-of-eden-clawson-art-37727-print.jpg?download=true"
             alt ="Not Found"
             style="width:100%;">
-    <h1 align="center">Adam Meets Eve</h1>
+    <h1 align="center">AdameetsEve</h1>
     <form action="login" method="post">
         <div style="float:left">
         Username:<br>
