--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,10 +1,5 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>JSP Work Page</title>
     <meta charset="UTF-8">
@@ -16,14 +11,14 @@ and open the template in the editor.
             alt ="Not Found"
             style="width:100%;">
     <h1 align="center">Adam Meets Eve</h1>
-    <form action="login" method="post">
+    <form action="login" th:action="@{/login}" th:object="$(info)" method="post">
         <div style="float:left">
         Username:<br>
-        <input type="text" name="Username">
+        <input type="text" th:field="*{email}">
         </div>
         <div style="float:left">
         Password:<br>
-        <input type="text" name="Password">
+        <input type="text" th:field="*{password}">
         </div>
         <br/>
         <input type="submit" name="Login">
