--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,27 +1,151 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>JSP Work Page</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<div class = "head">
-    <img
-            src = "https://media.ldscdn.org/images/media-library/gospel-art/old-testament/garden-of-eden-clawson-art-37727-print.jpg?download=true"
-            alt ="Not Found"
-            style="width:100%;">
-    <h1 align="center">Adam Meets Eve</h1>
-    <form action="login" th:action="@{/login}" th:object="$(info)" method="post">
-        <div style="float:left">
-        Username:<br>
-        <input type="text" title="emailentry" th:field="*{email}"/>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="assets/img/ameicon.png">
+
+    <title>Adam Meets Eve | Welcome!</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <link href="assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="index.css" rel="stylesheet">
+    <link href="AdamMeetsEve.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body style="background-color: #ffa07a">
+
+  <!--
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="index.html">Adam Meets Eve</a>
         </div>
-        <div style="float:left">
-        Password:<br>
-        <input type="text" title="passwordentry" th:field="*{password}"/>
-        </div>
-        <br/>
-        <input type="submit"/>
-    </form>
-</div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <div class="d-flex">
+          <ul class="nav navbar-nav mr-auto">
+           <!-- <li class="active"><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
+          </ul>
+          </div>
+        </div><!--/.nav-collapse
+      </div>
+    </nav>
+   -->
+
+  </div>
+
+    <nav class="navbar navbar-expand-md fixed-top navbar-dark" div id="navbar">
+      <a class="navbar-brand abs" href="#">AdamMeetsEve</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="navbar-collapse collapse" id="collapsingNavbar">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <button type="button" button id="loginBtn" class="btn btn-info btn-md" data-toggle="modal" data-target="#myModal">Login</button>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+  <!-- Modal -->
+  <div id="myModal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <p>Returning Users Login.</p><br>
+      <form action="login" th:action="@{/login}" th:object="$(info)" method="post">
+        <table style="width:100%">
+          <tr>
+            <th>E-mail:</th>
+            <th><input type="text" div id="textBox" title="emailentry" th:field="*{email}"/></th>
+          </tr>
+          <tr>
+            <th>Password:</th>
+            <th><input type="text" div id="textBox" title="passwordentry" th:field="*{password}"/></th>
+          </tr>
+          <tr>
+            <th><input type="submit"/></th>
+          </tr>
+        </table>
+      </form>
+    </div>
+
+  </div>
+
+    <div class="container">
+
+      <div class="index-body">
+        <h1>Welcome To Adam Meets Eve.</h1><br>
+        <img
+                src = "https://media.ldscdn.org/images/media-library/gospel-art/old-testament/garden-of-eden-clawson-art-37727-print.jpg?download=true"
+                alt ="Not Found"
+                style="width:100%; border-radius: 90%;">
+        <p class="lead"><br> Your #1 dating site for Christian mingling. Click below to enter paradise.</p>
+        <button type="button" class="btn btn-dark btn-lg" div id="button" href="">Register</button>
+      </div>
+
+
+    </div><!-- /.container -->
+
+
+  <script>
+      var modal = document.getElementById('myModal');
+
+      // Get the button that opens the modal
+      var btn = document.getElementById("loginBtn");
+
+      // Get the <span> element that closes the modal
+      var span = document.getElementsByClassName("close")[0];
+
+      // When the user clicks on the button, open the modal
+      btn.onclick = function() {
+          modal.style.display = "block";
+      }
+
+      // When the user clicks on <span> (x), close the modal
+      span.onclick = function() {
+          modal.style.display = "none";
+      }
+
+      // When the user clicks anywhere outside of the modal, close it
+      window.onclick = function(event) {
+          if (event.target == modal) {
+              modal.style.display = "none";
+          }
+      }
+  </script>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+  </body>
 </html>
